MEC Production/MEC Production/src/objects/Stock__c.object
<CustomObject>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stocks</relationshipLabel>
        <relationshipName>Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descr_of_Storage_Loc__c</fullName>
        <label>Descr. of Storage Loc.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Key_Formula__c</fullName>
        <formula>Article__r.Article__c  &amp; &quot;-&quot; &amp; Sotrage_Location__c  &amp; &quot;-&quot; &amp;  Site__r.Site__c</formula>
        <label>External Key (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Article&quot;-&quot;Sotrage Location&quot;-&quot;Warehouse</inlineHelpText>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <label>Reserved</label>
        <summarizedField>Stock_line_Items__c.Quanitiy__c</summarizedField>
        <summaryFilterItems>
            <field>Stock_line_Items__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Stock_line_Items__c.Stock_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Stocks</relationshipLabel>
        <relationshipName>Stocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sotrage_Location__c</fullName>
        <label>Sotrage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Stock__c</fullName>
        <label>Special Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Stock_number__c</fullName>
        <label>Special Stock number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transit_and_Transfer__c</fullName>
        <label>Transit and Transfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unrestricted__c</fullName>
        <label>Unrestricted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Val_in_Trans_Tfr__c</fullName>
        <label>Val. in Trans./Tfr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_restricted__c</fullName>
        <label>Value restricted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Stock</label>
    <nameField>
        <displayFormat>SN-{0000000000}</displayFormat>
        <label>Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>